apps/audiobookshelf/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: audiobookshelf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
      - name: audiobookshelf
        image: ghcr.io/advplyr/audiobookshelf:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /config
        - name: metadata
          mountPath: /metadata
        - name: audiobooks
          mountPath: /audiobooks
        - name: podcasts
          mountPath: /podcasts
        - name: ebooks
          mountPath: /ebooks
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: metadata
        persistentVolumeClaim:
          claimName: metadata
      - name: audiobooks
        persistentVolumeClaim:
          claimName: audiobooks
      - name: podcasts
        persistentVolumeClaim:
          claimName: podcasts
      - name: ebooks
        persistentVolumeClaim:
          claimName: ebooks
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  selector:
    app: audiobookshelf
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik-public
  rules:
  - host: books.mlops-club.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audiobookshelf
            port:
              number: 80
